<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="kh.sergeimaleev.helper.Converters"/>
        <variable
            name="post"
            type="kh.sergeimaleev.model.PostItem" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/item_post_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/item_post_header_avatar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:binding_url="@{post.userAvatar}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"
                app:civ_border_width="1dp"
                app:civ_border_color="#FF000000"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/item_post_header_title_first"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@{post.userName}"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/item_post_header_title_second"
                app:layout_constraintEnd_toStartOf="@+id/item_post_header_three_dots"
                app:layout_constraintStart_toEndOf="@+id/item_post_header_avatar"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="User nick name" />

            <TextView
                android:id="@+id/item_post_header_title_second"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@{post.userPlace}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/item_post_header_three_dots"
                app:layout_constraintStart_toEndOf="@+id/item_post_header_avatar"
                app:layout_constraintTop_toBottomOf="@+id/item_post_header_title_first"
                tools:text="User location place" />

            <ImageButton
                android:id="@+id/item_post_header_three_dots"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_3dots"
                tools:ignore="ContentDescription" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/item_post_main"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/item_post_footer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_post_header">

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/item_post_main_viewpager"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@+id/post_bar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/post_bar"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:padding="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/item_post_main_viewpager">

                <ImageView
                    android:id="@+id/iv_like"
                    android:layout_width="30dp"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/iv_comments"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_heart"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/iv_comments"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/iv_share"
                    app:layout_constraintStart_toEndOf="@+id/iv_like"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_chat"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/iv_share"
                    android:layout_width="30dp"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/view_pager_indicator"
                    app:layout_constraintStart_toEndOf="@+id/iv_comments"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_send"
                    tools:ignore="ContentDescription" />

                <me.relex.circleindicator.CircleIndicator
                    android:id="@+id/view_pager_indicator"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    app:ci_drawable="@drawable/ic_drawable_selected"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/iv_bookmark"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/view_pager_indicator"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_bookmark"
                    tools:ignore="ContentDescription" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/item_post_footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/item_post_footer_liked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@{`Liked by `+Converters.toClearString(post.likedBy)}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Liked" />

            <TextView
                android:id="@+id/item_post_footer_name"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@{post.userName}"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_post_footer_liked"
                tools:text="User nick name" />

            <TextView
                android:id="@+id/item_post_footer_tags"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@{Converters.toClearString(post.tags)}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/item_post_footer_name"
                app:layout_constraintTop_toTopOf="@+id/item_post_footer_name"
                tools:text="Tags" />

            <TextView
                android:id="@+id/item_post_footer_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@{Converters.toFormattedString(post.date)}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/item_post_footer_tags" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>